syntax = "proto3";
option go_package = "github.com/ddritzenhoff/dinny/http/grpc/pb";
package pb;

message PingResponse {
  string message = 1;
}

message GetMembersResponse {
  string full_name = 1;
  string slack_UID = 2;
}

message Date {
  int64 year = 1;
  int64 month = 2;
  int64 day = 3;
}

message CookAssignment {
  Date date = 1;
  string slack_UID = 2;
}

message AssignCooksRequest {
  repeated CookAssignment assignments = 1;
}

message EmptyMessage {}

message UpcomingCooksRequest {
  int64 days_wanted = 1;
}

message Meal {
  Date date = 1;
	string cook_slack_UID = 2;
	string description = 3;
	string slack_message_ID = 4;
  string full_name = 5;
}

message UpcomingCooksResponse {
  repeated Meal Meals = 1;
}

service SlackActions {
  rpc EatingTomorrow(EmptyMessage) returns (EmptyMessage) {}
  rpc Ping(EmptyMessage) returns (PingResponse) {}
  rpc GetMembers(EmptyMessage) returns (stream GetMembersResponse) {}
  rpc WeeklyUpdate(EmptyMessage) returns (EmptyMessage) {}
  rpc AssignCooks(AssignCooksRequest) returns (EmptyMessage) {}
  rpc UpcomingCooks(UpcomingCooksRequest) returns (UpcomingCooksResponse) {}
}
